chapter resource gen

--- a/templates/chapter_resources.yaml
+++ b/templates/chapter_resources.yaml
@@ -5,7 +5,8 @@ embibe:
 khan: 
   - khanAcademyVideo1
   - khanAcademyVideo2
-phet: phetLink
+phet: 
+  - phetLink
 
 # Any extra resources here
 extra:
