--- a/templates/chapter_info.yaml
+++ b/templates/chapter_info.yaml
@@ -4,8 +4,13 @@ name: Chapter Name
 desc: Chapter Description
 study-time: 10:30
 tags: 
-  - tag1
-  - tag2
+  accept:
+    - tag1
+    - tag2
+
+# Subtopic tags
+subtopic-tags:
+  main:
 
 # If omitted, gen_info.py will automatically use the first tag as the primary tag
 primary-tag: tag1
