Some fixes to improve stability

--- a/core/internal_api.yaml
+++ b/core/internal_api.yaml
@@ -1,3 +1,4 @@
+title: Cats And Dragons
 description: 
   Warning, this API is only for internal use. Do not expose this out to the public. 
   This API may be slow at times and may hang or error. Please do not share any tracebacks!
