--- a/grades/6/cbse/science/2/info.yaml
+++ b/grades/6/cbse/science/2/info.yaml
@@ -1,8 +1,8 @@
 # Access ID
-iname: "test-physics"
+iname: "test-topic-two"
 
 # Chapter info
-name: "Test"
+name: "Testing science topic 2"
 study-time: 0
 
 # Topics
