--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 __pycache__
 *.min.json
 build
+                    <button class="btn btn-lg btn-link btn-block" type="button" aria-expanded="true" >
