--- a/grades/6/cbse/science/2/info.yaml
+++ b/grades/6/cbse/science/2/info.yaml
@@ -1,8 +1,8 @@
 # Access ID
-iname: "test-topic-two"
+iname: "food-components"
 
 # Chapter info
-name: "Testing science topic 2"
+name: "Components of Food"
 study-time: 0
 
 # Topics
