--- a/grades/6/cbse/science/1/info.yaml
+++ b/grades/6/cbse/science/1/info.yaml
@@ -16,6 +16,11 @@ topics:
     reject:
     - deficiency
     subtopics:
+      main:
+        name: Test Subtopic
+        accept:
+        reject:
+        subtopics:
   deficiency:
     name: Deficiency Diseases
     accept:
