--- a/templates/yaml/chapter_info.yaml
+++ b/templates/yaml/chapter_info.yaml
@@ -7,8 +7,8 @@ study-time: 0
 
 # Topics
 topics:
-  # The main topic is always the base topic that is used
-  main:
+  # The _root topic is always the base topic that is used. For backwards compatibility, main is autoconverted to root
+  _root:
     name: $name # Optional
     accept:
       - food
