--- a/grades/6/cbse/science/1/info.yaml
+++ b/grades/6/cbse/science/1/info.yaml
@@ -7,8 +7,8 @@ study-time: 0
 
 # Topics
 topics:
-  # The _root topic is always the base topic that is used. For backwards compat, main is autoconverted to _root
-  _root:
+  # The main topic is always the base topic that is used.
+  main:
     name: $name # Optional
     accept:
     - food
@@ -16,7 +16,7 @@ topics:
     reject:
     - deficiency
     subtopics:
-      main:
+      main-rn:
         name: Test Subtopic
         accept:
         reject:
