Some fixes to improve stability

--- a/core/index.yaml
+++ b/core/index.yaml
@@ -32,4 +32,4 @@ ourvision: >
   <br/>
   <br/>
   <br/>
-  <small><em>Note that personalisation is only available when logged in. This is subject to potential downtime and maintenance</em></small>
+  <small><em>* - Note that personalisation is only available when logged in. This is subject to potential downtime and maintenance</em></small>
